Fix z-index of see all people link.

--- a/source/wp-content/themes/wporg-news-2021/sass/components/front-page/_people-of-wordpress.scss
+++ b/source/wp-content/themes/wporg-news-2021/sass/components/front-page/_people-of-wordpress.scss
@@ -78,6 +78,10 @@ body.news-front-page .front__people-of-wordpress {
 	.wp-block-query-pagination {
 		margin-top: 0;
 
+		a {
+			position: relative;
+		}
+
 		&::after {
 			background-color: var(--wp--preset--color--white);
 		}
